--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
 <h1>Game Of Life</h1>
     <canvas id="canvas" width="621" height="621"></canvas>
     <br>
-    <button type="button" id = "controlButton" onclick="runControl()">Run</button>
+
+      <div id = "controlsWrapper">
+
+        <button type="button" id = "controlButton" onclick="runControl()">Run</button>
+
+        
+        <div id = "sliderControl">
+          <label id = "timeLabel">Speed:</label>
+          <input  type="range" min="-1000" max="0" value="-500" id="timeSlider">
+        </div>
+        
+      </div>
+
   </body>
   <script src="script.js"></script>
 </html>
